# solid-datafusion-table-demo

./: TODO
app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  createRecordSetView.ts  index.css  index.ts
data/: sales.csv  sales2.csv
engine/: Cargo.toml  LICENSE_APACHE  LICENSE_MIT  rustfmt.toml
engine/src/: file.rs  file_format.rs  js_object_store.rs  json_infer.rs  lib.rs  plan.rs  record_set.rs  utils.rs
engine/src/byte_transform/: chunked.rs  mod.rs  remove_line_breaks.rs  utf8_encoder.rs  wrap_file.rs  wrap_lines.rs
