[package]
authors = ["Alexander Rafferty <hello@alexanderrafferty.com>"]
edition = "2018"
name = "engine"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["console_error_panic_hook"]

[dependencies]
arrayvec = "0.7"
async-trait = "0.1"
bumpalo = "3.20"
chrono = { version = "0.4", features = ["js-sys", "wasmbind"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
datafusion = { version = "52", default-features = false, features = [
    "nested_expressions",
    "parquet",
    "serde",
] }
futures = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom2 = { package = "getrandom", version = "0.2", features = ["js"] }
js-sys = "0.3"
serde = "1.0"
serde_json = "1.0"
tsify = { version = "0.5", features = ["js"] }
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "File",
    "FileSystemFileHandle",
    "console",
] }
# bytes = "1.0"
# itertools = "0.14.0"
# thiserror = "2.0.12"
# async-trait = "0.1.88"
# object_store = "0.12.3"
# slotmap = { version = "1.0.7", features = ["serde"] }
# lru = "0.16.0"
# smallvec = "1.15.1"
# paste = "1.0.15"
# bincode = { version = "2.0.1", features = ["serde"] }
# serde-wasm-bindgen = "0.6.5"
# chardet = "0.2.4"

[dev-dependencies]
# tokio = { version = "1.45.1", features = ["macros", "rt", "sync"] }
wasm-bindgen-test = "0.3"
